Got editor and relay working at the same time

--- a/helloworld/helloworld/public/index.html
+++ b/helloworld/helloworld/public/index.html
@@ -26,6 +26,7 @@
                     </select>
                 </div>                
                 <p>Acknowledge the victory of your robot overlords.</p>
+                <input type="range" name="slider" id="slider" value="0" min="0" max="100" data-theme="b" data-track-theme="a" />
             </form>                
         </div>
     </div>
