--- a/static/index.html
+++ b/static/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Real good little computers" />
-    <title>Rascal Micro</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.css" />
-    <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.js"></script>
-    <script type="text/javascript" src="/test.js"></script>
+    <meta charset="utf-8">
+    <title>Rascal demo</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="shortcut icon" href="/static/favicon.ico"> 
+    <script src="/static/jquery-1.5.js"></script>
 </head>
 <body>
-    <div data-role="page">
-        <div data-role="header">
-            <h1>Rascal demo</h1>
-        </div>
-        <div data-role="content"> 
-            <form id="relay-form">
-                <div data-role="fieldcontain">
-                    <label for="relay-toggle">Toggle relay</label>
-                    <select name="relay-toggle" id="relay-toggle" data-role="slider">
-                        <option value="off">Off</option>
-                        <option value="on">On</option>
-                    </select>
-                </div>                
-                <p>Acknowledge the victory of your robot overlords.</p>
-                <input type="range" name="slider" id="slider" value="0" min="0" max="100" data-theme="b" data-track-theme="a" />
-            </form>                
-        </div>
+    <div class="rascalcontent">
+        <h1><a href="/index.html">Rascal demos</a></h1>
+        <ul>
+            <li><a href="http://192.168.1.3/relay.html">Controlling a relay</a></li>
+            <li><a href="http://192.168.1.4/static/video.html">Streaming video</a></li>
+            <li><a href="http://192.168.1.5/lcd.html">Sending text to an LCD display</a></li>
+        </ul>
     </div>
 </body>
 </html>
