--- a/static/video.html
+++ b/static/video.html
@@ -10,10 +10,30 @@
     <div class="rascalcontent"> 
         <h1><a href="/video.html">Streaming video demo</a></h1> 
         <ul>
-            <li><a href="static/video-serenity.html" width="1280" height="736px">Serenity</a></li>
-            <li><a href="static/video-bourne.html" width="1280" height="736px">Bourne Ultimatum</a></li>
-            <li><a href="static/video-transformers-480p.html" width="1280" height="736px">Transformers</a></li>
-            <li><a href="static/video-transformers-low-res.html" width="1280" height="736px">Transformers for mobile</a></li>
+            <li>
+                <a href="/static/video-transformers-480p.html" width="1280" height="736px">
+                <h2>Transformers: Dark of the Moon (480p)</h2>
+                <img src="/static/video/transformers-screenshot-300px.png">
+                </a>
+            </li>
+            <li>
+                <a href="/static/video-serenity.html" width="1280" height="736px">
+                <h2>Serenity (720p)</h2>
+                <img src="/static/video/serenity-screenshot-300px.png">
+                </a>
+            </li>
+            <li>
+                <a href="/static/video-bourne.html" width="1280" height="736px">
+                <h2>Bourne Ultimatum (1080p)</h2>
+                <img src="/static/video/bourne-screenshot-300px.png">
+                </a>
+            </li>
+            <li>
+                <a href="/static/video-transformers-low-res.html" width="1280" height="736px">
+                <h2>Transformers for mobile</h2>
+                <img src="/static/video/transformers-screenshot-300px.png">
+                </a>
+            </li>
         </ul>
     </div> 
 </body> 
