Put back log-mark css, improved 404.html

--- a/http-errors/404.html
+++ b/http-errors/404.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html> 
-<html> 
-<head> 
-    <meta charset="utf-8"> 
+<html lang="en">
+<head>
     <title>There has been an error.</title> 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> 
-    <link rel="stylesheet" type="text/css" href="/static/style.css"> 
-    <link rel="shortcut icon" href="/static/favicon.ico"> 
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="/static/ico/favicon.ico">
+    <link href="/static/css/bootstrap-2.0.4.css" rel="stylesheet">
+    <link href="/static/css/boilerplate.css" rel="stylesheet">
 </head> 
 <body> 
-    <div class="rascalcontent"> 
-        <h1>There has been an error.</h1>
-        <p>You have reached a Rascal, but the specific file you're looking for is nowhere to be found.</p>
-        <p>(Strictly speaking, the Rascal webserver reported error code 404, "File not found.")</p>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand rascal" href="#"><img id="rascallogo" src="/static/images/rm-logo-words-only-light.png" /></a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="well rascal">
+            <h1>There has been an error.</h1>
+            <p>You have reached a Rascal, but the specific file you're looking for is nowhere to be found.</p>
+            <p>(Strictly speaking, the Rascal webserver reported error code 404, "File not found.")</p>
+        </div>
     </div>
 </body>
+</html>
